--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -65,15 +65,33 @@ section{
 .sec2{
   display: none;
   transform: translateY(0) scale(1);
+  background-color: slateblue;
 }
 .sec3{
   display: none;
   transform: translateY(0) scale(1);
+  background-color: rgb(146,205,90);
 }
 .sec4{
   display: none;
   transform: translateY(0) scale(1);
+  background-color: slateblue;
 }
+.sec5{
+  display: none;
+  transform: translateY(0) scale(1);
+  background-color: rgb(146, 205,90);
+}
+.sec6{
+  display: none;
+  transform: translateY(0) scale(1);
+  background-color: slateblue;
+}
+
+.active{
+  display: block;
+}
+
 
 //controls
 .controls{
