--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -65,31 +65,35 @@ section{
 .sec2{
   display: none;
   transform: translateY(0) scale(1);
-  background-color: slateblue;
 }
 .sec3{
   display: none;
   transform: translateY(0) scale(1);
-  background-color: rgb(146,205,90);
 }
 .sec4{
   display: none;
   transform: translateY(0) scale(1);
-  background-color: slateblue;
 }
 .sec5{
   display: none;
   transform: translateY(0) scale(1);
-  background-color: rgb(146, 205,90);
 }
 .sec6{
   display: none;
   transform: translateY(0) scale(1);
-  background-color: slateblue;
 }
 
 .active{
   display: block;
+  animation: scaleAnim 1s ease-in-out;
+  @keyframes scaleAnim {
+    0%{
+      transform: translateY(-100%) scaleY(0);
+    }
+    100%{
+      transform: translateY(0%) scaleY(1);
+    }
+  }
 }
 
 
@@ -130,3 +134,46 @@ section{
     }
   }
 }
+
+/* Header-content */
+.header-content{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  height: 100%;
+  .left-header{
+    display: flex;
+    align-items: center;
+    position: relative;
+    .h-shape{
+      transition: all .4s ease-in-out;
+      width: 65%;
+      height: 100%;
+      background-color: var(--color-secondary);
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: -1;
+      clip-path: polygon(0 0, 80% 0%, 100% 100%, 0% 100%);  ;
+    }
+    .image{
+      border-radius: var(--br-sm-2);
+      width: 90%;
+      height: 68%;
+      margin: 4rem;
+      background-color: var(--color-black);
+      transition: all .4s ease-in-out;
+      img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: all .4s ease-in-out;
+        filter: grayscale(0%);
+        &:hover{
+          filter: grayscale(20%);
+        }
+      }
+    }
+  }
+}
+
+/* Independent components */
