--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -23,7 +23,7 @@
 
 
 body{
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Crete Round', serif;
   background-color:var(--color-primary);
   font-size: 1.1rem;
   color: var(--color-white);
@@ -86,14 +86,6 @@ section{
 .active{
   display: block;
   animation: scaleAnim 1s ease-in-out;
-  @keyframes scaleAnim {
-    0%{
-      transform: translateY(-100%) scaleY(0);
-    }
-    100%{
-      transform: translateY(0%) scaleY(1);
-    }
-  }
 }
 
 
@@ -119,9 +111,9 @@ section{
     padding: 1rem;
     cursor: pointer;
     background-color: var(--color-grey-4);
-    width: 55px;
+    width: 100px;
     height: 55px;
-    border-radius: 50%;
+    border-radius: 0%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -131,6 +123,9 @@ section{
       font-size: 1.2rem;
       color: var(--color-grey-2);
       pointer-events: none;
+    }
+    span{
+      margin: .7rem 0 ;
     }
   }
 }
