--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,10 @@
   list-style: none;
 }
 
+.no-italics {
+  font-style: normal;
+}
+
 :root {
   --color-primary: #191d2b;
   --color-secondary: #27AE60;
@@ -58,7 +62,7 @@ section {
           transform: translateY(-100%) scale(0);
   -webkit-transition: all .4s ease-in-out;
   transition: all .4s ease-in-out;
-  background-color: var(--color-primary);
+  background-color: var(--color-white);
 }
 
 .sec1 {
@@ -107,7 +111,7 @@ section {
   position: fixed;
   z-index: 10;
   top: 50%;
-  right: 3%;
+  left: 10%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -126,19 +130,21 @@ section {
 }
 
 .controls .active-btn {
-  background-color: var(--color-secondary) !important;
-  -webkit-transition: all .4s ease-in-out;
-  transition: all .4s ease-in-out;
+  color: var(--color-black);
+  -webkit-transition: all .0s ease-in-out;
+  transition: all .0s ease-in-out;
 }
 
 .controls .active-btn i {
-  color: var(--color-white) !important;
+  color: var(--color-black) !important;
 }
 
 .controls .control {
   padding: 1rem;
   cursor: pointer;
-  background-color: var(--color-grey-4);
+  border-color: var(--color-black);
+  background-color: var(--color-white);
+  color: var(--color-black);
   width: 100px;
   height: 55px;
   border-radius: 0%;
@@ -152,8 +158,6 @@ section {
       -ms-flex-align: center;
           align-items: center;
   margin: .7rem 0;
-  -webkit-box-shadow: var(--box-shadow-1);
-          box-shadow: var(--box-shadow-1);
 }
 
 .controls .control i {
@@ -168,6 +172,7 @@ section {
 
 /* Header-content */
 .header-content {
+  color: var(--color-black);
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[2];
@@ -190,7 +195,7 @@ section {
   transition: all .4s ease-in-out;
   width: 65%;
   height: 100%;
-  background-color: var(--color-secondary);
+  background-color: var(--color-white);
   position: absolute;
   left: 0;
   top: 0;
