--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   list-style: none;
 }
-
+.no-italics {
+  font-style: normal;   
+}
 :root{
   --color-primary: #191d2b;
   --color-secondary: #27AE60;
@@ -55,7 +57,7 @@ section{
 .section{
   transform: translateY(-100%) scale(0);
   transition: all .4s ease-in-out;
-  background-color: var(--color-primary);
+  background-color: var(--color-white);
 }
 
 .sec1{
@@ -94,23 +96,25 @@ section{
   position: fixed;
   z-index: 10;
   top: 50%;
-  right: 3%;
+  left: 10%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   transform: translateY(-50%);
   .active-btn{
-    background-color: var(--color-secondary) !important;
-    transition: all .4s ease-in-out;
+    color: var(--color-black);
+    transition: all .0s ease-in-out;
     i{
-      color: var(--color-white) !important;
+      color: var(--color-black) !important;
     }
   }
   .control{
     padding: 1rem;
     cursor: pointer;
-    background-color: var(--color-grey-4);
+    border-color: var(--color-black);
+    background-color: var(--color-white);
+    color: var(--color-black);
     width: 100px;
     height: 55px;
     border-radius: 0%;
@@ -118,7 +122,6 @@ section{
     justify-content: center;
     align-items: center;
     margin: .7rem 0 ;
-    box-shadow: var(--box-shadow-1);
     i{
       font-size: 1.2rem;
       color: var(--color-grey-2);
@@ -132,6 +135,7 @@ section{
 
 /* Header-content */
 .header-content{
+  color: var(--color-black);
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   height: 100%;
@@ -143,7 +147,7 @@ section{
       transition: all .4s ease-in-out;
       width: 65%;
       height: 100%;
-      background-color: var(--color-secondary);
+      background-color: var(--color-white);
       position: absolute;
       left: 0;
       top: 0;
