update teaching page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,7 +28,7 @@
 
 body {
   font-family: 'Crete Round', serif;
-  background-color: var(--color-primary);
+  background-color: var(--color-white);
   font-size: 1.1rem;
   color: var(--color-white);
   -webkit-transition: all .4s ease-in-out;
@@ -96,6 +96,12 @@ section {
 }
 
 .sec6 {
+  display: none;
+  -webkit-transform: translateY(0) scale(1);
+          transform: translateY(0) scale(1);
+}
+
+.sec7 {
   display: none;
   -webkit-transform: translateY(0) scale(1);
           transform: translateY(0) scale(1);
