--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,7 +25,7 @@
 
 
 body{
-  font-family: 'Crete Round', serif;
+  font-family: 'EB Garamond', serif;
   background-color:var(--color-white);
   font-size: 1.1rem;
   color: var(--color-white);
@@ -105,13 +105,14 @@ section{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  transform: translateY(-50%);
+  transform: translateY(-60%);
   .active-btn{
     color: var(--color-black);
-    transition: all .0s ease-in-out;
+    transition: all .4s ease-in-out;
     i{
       color: var(--color-black) !important;
     }
+    
   }
   .control{
     padding: 1rem;
@@ -125,7 +126,7 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: .7rem 0 ;
+    margin: .1rem 0 ;
     i{
       font-size: 1.2rem;
       color: var(--color-grey-2);
