attempt to link about page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,6 +72,7 @@ section {
 }
 
 .sec2 {
+  background: var(--color-secondary);
   display: none;
   -webkit-transform: translateY(0) scale(1);
           transform: translateY(0) scale(1);
