--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -65,6 +65,7 @@ section{
   transform: translateY(0) scale(1);
 }
 .sec2{
+  background: var(--color-secondary);
   display: none;
   transform: translateY(0) scale(1);
 }
