--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -143,12 +143,23 @@ section{
 .header-content{
   color: var(--color-black);
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 2fr;
   height: 100%;
   .right-header{
-    position: relative;
-    top: 30%;
-    right: 30%;  
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 15rem;
+    .name{
+      font-size: 3rem;
+      span{
+        color: var(--color-secondary);
+      }
+    }
+    p{
+      margin: 1.5rem 0;
+      line-height: 2rem;
+    }
   }
   .left-header{
     display: flex;
@@ -187,3 +198,49 @@ section{
 }
 
 /* Independent components */
+.btn-con{
+  display: flex;
+  align-self: flex-start;
+}
+.main-btn{
+  border-radius: 30px;
+  color: inherit;
+  font-weight: 600;
+  position: relative;
+  border: 1px solid var(--color-secondary);
+  display: flex;
+  align-self: flex-start;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  .btn-text{
+    padding: 0 2rem;
+  }
+  .btn-icon{
+    color: white;
+    background-color: var(--color-secondary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    padding: 0.5rem;
+  }
+  &::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: trnaslateX(100%);
+    transition: all .4s ease-out;
+    z-index: -1;
+  }
+  &:hover{
+    &::before{
+      width: 100%;
+      height: 100%;
+      background-color: var(--color-secondary);
+      transform: translateX(0);
+    }
+  }
+
+}
