--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -28,7 +28,7 @@ body{
   font-family: 'EB Garamond', serif;
   background-color:var(--color-white);
   font-size: 1.1rem;
-  color: var(--color-white);
+  color: var(--color-black);
   transition: all .4s ease-in-out;
 }
 
@@ -243,4 +243,28 @@ section{
     }
   }
 
+}
+
+.main-title{
+  text-align: center;
+  h2{
+    position: relative;
+    text-transform: uppercase;
+    font-size: 4rem;
+    font-weight: 700;
+    span{
+      color: var(--color-secondary);
+    }
+    .bg-text{
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      color: var(--color-grey-5);
+      transition: all .4s ease-in-out;
+      z-index: -1;
+      transform: translate(-50%, -50%);
+      font-weight: 800;
+      font-size: 6.3rem;
+    }
+  }
 }
