--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -241,9 +241,10 @@ section{
   }
   .left-about{
     padding-right: 5rem;
+    padding-left: 5rem;
     p{
       line-height: 1.5rem;
-      padding: 1rem;
+      padding: 3rem;
       color: var(--color-grey-5);
     }
     h4{
