--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@
 
 :root {
   --color-primary: #191d2b;
-  --color-secondary: #27AE60;
+  --color-secondary: #191d2b;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -21,7 +21,7 @@
   --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
   --color-grey-5: #2a2e35;
-  --color-grey-6: #12181b;
+  --color-grey-6: #1b1512;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,0.3);
 }
@@ -187,6 +187,7 @@ section {
 }
 
 .header-content .right-header {
+  color: var(--color-grey-2);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -198,6 +199,7 @@ section {
       -ms-flex-pack: center;
           justify-content: center;
   padding-right: 15rem;
+  padding-bottom: 6rem;
 }
 
 .header-content .right-header .name {
@@ -211,6 +213,7 @@ section {
 .header-content .right-header p {
   margin: 1rem 0;
   line-height: 1.5rem;
+  color: var(--color-black);
 }
 
 .header-content .left-header {
@@ -369,6 +372,7 @@ section {
 
 .main-btn .btn-text {
   padding: 0 1rem;
+  color: var(--color-black);
 }
 
 .main-btn .btn-icon {
