--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,7 +9,7 @@
 }
 :root{
   --color-primary: #191d2b;
-  --color-secondary: #27AE60;
+  --color-secondary: #191d2b;
   --color-white: #FFFFFF;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -18,7 +18,7 @@
   --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
   --color-grey-5: #2a2e35;
-  --color-grey-6: #12181b;
+  --color-grey-6: #1b1512;
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0,0,0,0.3);
 }
@@ -146,10 +146,12 @@ section{
   grid-template-columns: 1fr 2fr;
   height: 100%;
   .right-header{
+    color: var(--color-grey-2);
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-right: 15rem;
+    padding-bottom: 6rem;
     .name{
       font-size: 3rem;
       span{
@@ -159,6 +161,7 @@ section{
     p{
       margin: 1rem 0;
       line-height: 1.5rem;
+      color: var(--color-black);
     }
   }
   .left-header{
@@ -273,6 +276,7 @@ section{
   overflow: hidden;
   .btn-text{
     padding: 0 1rem;
+    color: var(--color-black);
   }
   .btn-icon{
     color: white;
