--- a/styles/styles.css
+++ b/styles/styles.css
@@ -353,11 +353,9 @@ section {
 }
 
 .main-btn {
-  border-radius: 30px;
   color: inherit;
   font-weight: 600;
   position: relative;
-  border: 1px solid var(--color-secondary);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -376,8 +374,8 @@ section {
 }
 
 .main-btn .btn-icon {
-  color: white;
-  background-color: var(--color-secondary);
+  color: black;
+  background-color: var(--color-white);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -389,26 +387,13 @@ section {
           justify-content: center;
   border-radius: 50%;
   padding: 0.5rem;
+  -webkit-transition: all ease-in-out 0.2s;
+  transition: all ease-in-out 0.2s;
+  cursor: pointer;
 }
 
-.main-btn::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  -webkit-transform: trnaslateX(100%);
-          transform: trnaslateX(100%);
-  -webkit-transition: all .4s ease-out;
-  transition: all .4s ease-out;
-  z-index: -1;
-}
-
-.main-btn:hover::before {
-  width: 100%;
-  height: 100%;
-  background-color: var(--color-secondary);
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
+.main-btn .btn-icon:hover {
+  background-color: #ddd;
 }
 
 .main-title {
