--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -264,11 +264,9 @@ section{
   align-self: flex-start;
 }
 .main-btn{
-  border-radius: 30px;
   color: inherit;
   font-weight: 600;
   position: relative;
-  border: 1px solid var(--color-secondary);
   display: flex;
   align-self: flex-start;
   display: flex;
@@ -279,30 +277,18 @@ section{
     color: var(--color-black);
   }
   .btn-icon{
-    color: white;
-    background-color: var(--color-secondary);
+    color: black;
+    background-color: var(--color-white);
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
     padding: 0.5rem;
+    transition: all ease-in-out 0.2s;
+    cursor: pointer;
   }
-  &::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: trnaslateX(100%);
-    transition: all .4s ease-out;
-    z-index: -1;
-  }
-  &:hover{
-    &::before{
-      width: 100%;
-      height: 100%;
-      background-color: var(--color-secondary);
-      transform: translateX(0);
-    }
+  .btn-icon:hover{
+    background-color: #ddd;
   }
 
 }
