--- a/styles/styles.css
+++ b/styles/styles.css
@@ -348,8 +348,8 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 .main-btn {
