--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,7 +25,7 @@
 
 
 body{
-  font-family: 'EB Garamond', serif;
+  font-family: 'Yrsa', serif;
   background-color:var(--color-white);
   font-size: 1.1rem;
   color: var(--color-black);
