--- a/styles/styles.css
+++ b/styles/styles.css
@@ -319,6 +319,21 @@ section {
   color: var(--color-secondary);
 }
 
+.about-container .right-about .about-item .abt-text .medium-text {
+  font-size: 2rem;
+  font-weight: 700;
+  color: var(--color-secondary);
+}
+
+.about-container .right-about .about-item .abt-text .med-small-text {
+  padding-top: 0.3em;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  color: var(--color-grey-1);
+  letter-spacing: 2px;
+}
+
 .about-container .right-about .about-item .abt-text .small-text {
   padding-left: 3rem;
   position: relative;
